tests/FLang.Tests/Harness/errors/error_e1002_expected_token.f
//! TEST: error_e1002_expected_token
//! COMPILE-ERROR: E1002

pub fn main() i32 {
    let x: i32 = 42
    return x
// Missing closing brace
